--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ dependencies = [
     "coverage>=7.11.0",
     "fastapi[standard]>=0.119.1",
     "httpx>=0.28.1",
+    "jinja2>=3.1.4",
     "openai>=2.6.0",
     "pandas>=2.3.3",
     "pydantic>=2.12.3",
     "python-dotenv>=1.1.1",
-    "fpdf2>=2.7.10",
     "ruff>=0.14.1",
     "uvicorn>=0.30.0",
-    "fpdf>=1.7.2",
+    "weasyprint>=61.0",
 ]
 
 [tool.pytest.ini_options]
